# skipi.app

./: .gitignore  ARCHITECTURE_EPICS_FAST_RELEASES_TRUST.md  BUSINESS_RULES_REGISTER.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EMAIL_DELIVERY_DECISION.md  EMAIL_EML_IMPLEMENTATION_HANDOFF.md  LICENSE  MOBILE_START.md  README.md  SECURITY.md  SECURITY_THREAT_MODEL.md  presence-manifest.json
.github/: SIGNING_SETUP.md
.github/workflows/: ci.yml  macos-backfill.yml  release.yml  skipi-guard.yml
scripts/: RF_MIRROR_PUBLISH.md  pre_release_smoke.py  prepare-rf-mirror.sh  publish-rf-mirror.sh
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  desktop-updater.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/: agency_mailing_db.seed.json
src-tauri/src/: api.rs  cv.rs  db.rs  demo.rs  feedback.rs  frameworks.rs  identity.rs  lib.rs  main.rs  profiles.rs  templates.rs
src-tauri/src/commands/: agency_mailing.rs  ai.rs  assistant.rs  cv_commands.rs  documents.rs  email.rs  email_mobile.rs  jobs.rs  mail_intent.rs  messaging.rs  mod.rs  packages.rs  profile.rs  review.rs  vault.rs  work_history.rs
tests/: build_provenance_harness.mjs  bundled_plugin_isolation_harness.mjs  mobile_bottom_rail_harness.mjs  mobile_settings_ia_harness.mjs  myvessel_identity_join_harness.mjs  seafarer_presence_contract_harness.mjs  seafarer_theme_default_harness.mjs  spc_dev_sender_harness.mjs
